--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,16 @@ section#about {
   section#about .about-heading {
     grid-area: about-heading; }
   section#about .about-image {
-    grid-area: about-image; }
+    grid-area: about-image;
+    background-image: url("/img/portrait.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    border-radius: 50%;
+    border: #6dcdef 3px solid; }
   section#about .about-text {
     grid-area: about-text; }
   section#about .chevron-up {
