Fix about image url in CSS

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -16,7 +16,7 @@ section {
 
     .about-image {
       grid-area: about-image;
-      background-image: url("/img/portrait.jpg");
+      background-image: url("/img/portrait.JPG");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
