--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ section#about {
     grid-area: about-heading; }
   section#about .about-image {
     grid-area: about-image;
-    background-image: url("/img/portrait.jpg");
+    background-image: url("/img/portrait.JPG");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
